@@ -511,7 +511,19 @@ module ActiveRecord #:nodoc:
           else             find_from_ids(args, options)
         end
       end
+      
+      # This is an alias for find(:first).  You can pass in all the same arguments to this method as you can
+      # to find(:first)
+      def first(*args)
+        find(:first, *args)
+      end
 
+      # This is an alias for find(:last).  You can pass in all the same arguments to this method as you can
+      # to find(:last)
+      def last(*args)
+        find(:last, *args)
+      end
+      
       #
       # Executes a custom sql query against your database and returns all the results.  The results will
       # be returned as an array with columns requested encapsulated as attributes of the model you call
